--- a/formularioweb/index.html
+++ b/formularioweb/index.html
@@ -18,12 +18,12 @@
 
     <div>
       <label for="id">ID:</label>
-      <input type="text" id="id" required>
+      <input type="number" id="id" required>
     </div>
 
     <div>
-      <label for="tipoCliente">Tipo de cliente:</label>
-      <select id="tipoCliente" required>
+      <label for="tipocliente">Tipo de cliente:</label>
+      <select id="tipocliente" required>
         <option value="">Selecione</option>
         <option value="fisica">Pessoa Física</option>
         <option value="juridica">Pessoa Jurídica</option>
@@ -37,12 +37,12 @@
 
     <div>
       <label for="cep">CEP:</label>
-      <input type="text" id="cep" required>
+      <input type="number" id="cep" required>
     </div>
 
     <div>
-      <label for="dataNascimento">Data de Nascimento:</label>
-      <input type="date" id="dataNascimento" required>
+      <label for="datanascimento">Data de Nascimento:</label>
+      <input type="date" id="datanascimento" required>
     </div>
 
     <div>
@@ -51,8 +51,8 @@
     </div>
 
     <div>
-      <label for="limiteCredito">Limite de Crédito:</label>
-      <input type="text" id="limiteCredito" required>
+      <label for="limitecredito">Limite de Crédito:</label>
+      <input type="number" id="limitecredito" required>
     </div>
 
     <button type="submit">Cadastrar</button>
