--- a/formularioweb/index.html
+++ b/formularioweb/index.html
@@ -9,10 +9,11 @@
 <body>
   <div class="content">
   <h1>Cadastro de Cliente</h1>
+  <p id="dadosUsuario">bem vindo:</p>
 
   <form id="formulario">
     <div>
-      <label for="nome">Nome:</label>
+      <label for="nome" id="dadosUsuario">Nome:</label>
       <input type="text" id="nome" required>
     </div>
 
@@ -60,5 +61,6 @@
 </div>
 
   <script src="../formularioweb/js/bb.js"></script>
+
 </body>
 </html>
